--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://cdn-icons-png.freepik.com/512/14642/14642233.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ageney-ai</title>
   </head>
